# taskforce

./: .coveragerc  .env  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: build.yml
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimuusmaarittely.md
dokumentaatio/img/: luokka_pakkaus
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  (+1 more)
laskarit/viikko3/: monopoli1.md  monopoli1_kaavio  monopoli2_kaavio
src/: build_ui.sh  config.py  create_db_schema.py  database_con.py  index.py  login_form.py  login_window_ui.py  org_service.py  task_service.py  taskforce_service.py  user_service.py
src/entities/: comment.py  notification.py  notifications.py  organization.py  task.py  user.py
src/repositories/: org_repository.py  task_repository.py  user_repository.py
src/services/: org_service.py  task_service.py  user_service.py
src/tests/: taskforce_service_test.py  todo_service_test.py
src/ui/: login_form.py  login_form.ui  login_window.ui  login_window_ui.py  main_window.py  main_window.ui  main_window_ui.py  messages.py  new_task.py  new_task_form_ui.py  org_create.py  org_create_form.ui  org_create_form_ui.py  org_join.py  org_join_window.ui  org_join_window_ui.py  signup_form.py  signup_form.ui  signup_form_ui.py
src/ui/ui_files/: login_window.ui  main_window.ui  new_task_form.ui  org_join_window.ui  signup_form.ui  todo_button.ui
