[tool.poetry]
name = "taskforce"
version = "0.1.0"
description = "An app that allows users to create projects and to share tasks within said project"
authors = ["Sasha Usoskin <sashausoskin@live.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PyQt5 = "^5.15.6"
plyer = "^2.0.0"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.3"
invoke = "^1.7.0"
psycopg2 = "^2.9.3"
dbus-python = "^1.2.18"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pyinstaller = "^4.10"
coverage = "^6.3.2"
pylint = "^2.13.3"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
