[tool.poetry]
name = "maksukortti"
version = "0.0.1"
description = "Viikon 2 laskaritehtävät"
authors = ["Sasha Usoskin <sashausoskin@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
